--- a/code/_includes/layout-page.njk
+++ b/code/_includes/layout-page.njk
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	<header><h1><a href="/">Tienda Virtul Mayorista </a></h1></header>
+	<header><h1><a href="/">Tienda Virtual Mayorista </a></h1></header>
 
 	<main>
 		{{content | safe}}
