--- a/code/item.njk
+++ b/code/item.njk
@@ -79,6 +79,6 @@ permalink: "productos/{{ producto.id }}/index.html"
 
 <script>
     function cambiarImagen(imagen) {
-        document.getElementById("imagenGrande").src = imagen;
+        document.getElementById("imagenGrande").src = `/TiendaMayorista${imagen}`;
     }
 </script>
